added signin page

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,7 @@
 @theme {
   --color-primary: #b39595;
   --color-secondary: #A88F85;
+  --color-liberty: #5D6B8D;
   --color-text-body: #6a6a6a;
 }
 
