added UI for sign in/up

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,6 +4,7 @@
   --color-primary: #b39595;
   --color-secondary: #A88F85;
   --color-liberty: #5D6B8D;
+  --color-liberty-dark: #4a5673;
   --color-text-body: #6a6a6a;
 }
 
