--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap');
 @import "tailwindcss";
 
 @theme {
@@ -30,12 +31,12 @@
   
   /* Setting the default body color you provided */
   body {
-    @apply text-text-body;
+    @apply text-gray-500;
   }
 }
 
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Playfair Display', sans-serif;
   font-weight: 400;
   color: var(--color-text);
   font-synthesis: none;
